<resources>
    <string name="app_name">WallMaster</string>
    <string name="welcome">WELCOME</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="main">Home</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="information">Information</string>
    <string name="account">Account</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="download_screen">Download to the screen</string>
    <string name="download_lock_screen">Download to the lock screen</string>
    <string name="download_both">Download there and there</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="search_et">Search</string>
    <string name="not_found">Not found</string>
    <string name="favorite">Favorite</string>
</resources>