<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:title="@string/main"
            android:icon="@drawable/home" />
        <item
            android:id="@+id/favorites"
            android:title="@string/favorites"
            android:icon="@drawable/favorites"/>
        <item
            android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/history"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/settings"/>
        <item
            android:id="@+id/support"
            android:title="@string/support"
            android:icon="@drawable/support"/>
        <item
            android:id="@+id/information"
            android:title="@string/information"
            android:icon="@drawable/baseline_info_24"/>
    </group>

</menu>