<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/prime">

        <TextView
            android:id="@+id/tvDownloadScr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:text="@string/download_screen"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawablePadding="10dp"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/baseline_image_24"/>

        <TextView
            android:id="@+id/tvDownloadLockScr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/raleway"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:text="@string/download_lock_screen"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/baseline_lock_24" />

        <TextView
            android:id="@+id/tvDownloadBoth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:text="@string/download_both"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawablePadding="10dp"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/install_mobile" />


    </LinearLayout>

</androidx.cardview.widget.CardView>